// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label sync reporter correctly generates report 1`] = `
"maticzav/label-sync
This is an autogenerated report for your project.
(dry run: "false")


Hey 👋 we synced your repository. Check the changes we made:

New Labels:
- test
  Testing sync.

Updated Labels:
No updates.

Removed Labels:
- bug/no-reproduction
  
- basic
  
- kind/bug
  



We used this configuration:
{
  "labels": {
    "test": {
      "description": "Testing sync.",
      "color": "#123456"
    }
  },
  "strict": true
}"
`;

exports[`label sync reporter generates correct empty report 1`] = `
"maticzav/label-sync
This is an autogenerated report for your project.
(dry run: "true")


Hey 👋 we synced your repository. Check the changes we made:

New Labels:
No new labels.

Updated Labels:
No updates.

Removed Labels:
No deadly changes.

We haven't removed any label yet.
If you want us to remove them, set strict to true.

We used this configuration:
{
  "labels": {},
  "strict": false
}"
`;
